--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./scripts/axios.js"></script>
-  <script src="./scripts/client.js"></script>
+  <script defer src="./scripts/client.js"></script>
   <title>SQL TO-DO List</title>
 </head>
 <body>
@@ -17,18 +19,45 @@
       <section>
         <h2>Add a todo item:</h2>
         <form>
-          <input id="todo-text" 
-                data-testid="toDoTextInput" 
-                type="text"
-                placeholder="Enter todo text here:"/>
+          <label for="todo-text-input" class="form-label"></label>
+          <textarea class="form-control" 
+                    id="todo-text-input"
+                    rows="3"
+                    data-testid="toDoTextInput"
+                    placeholder="Enter todo text here..."></textarea>
           <button onclick="addTodoItem(event)" 
-                  data-testid="submitButton">add item</button>
+                  data-testid="submitButton"
+                  class="btn btn-success add-btn">+
+          </button>
+          <button onclick="clearTodoText(event)"   
+                  class="btn btn-secondary clear-btn">C
+          </button>
         </form>
       </section>
       <section>
         <h2>Your current Todos:</h2>
-        <ul id="todo-list">
-        </ul>
+        <!-- <h3><span class=col-</h3> -->
+        <!-- Modal for the delete button on items via bootstrap              -->
+        <!-- (delete button defined dynamically in client.js)                -->
+        <div class="modal fade" id="delete-modal" role="dialog">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="delete-modal" id="delete-modal">Confirm delete item</h5>
+                <button type="button" class="close" data-bs-dismiss="modal">
+                  <span>&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">Are you sure you would like to delete this item?</div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" onclick="deleteTodoItem()">Delete Item</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="todo-list">
+        </div>
       </section>
     </main>
 </body>
